adds autoregressor optoins to regression

--- a/scripts/dataset_plots.ipynb
+++ b/scripts/dataset_plots.ipynb
@@ -8,7 +8,6 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ[\"JAX_PLATFORM_NAME\"] = \"cpu\"\n",
     "\n",
     "import adaptive_latents as al\n",
     "from adaptive_latents import NumpyTimedDataSource, Bubblewrap, AnimationManager, default_rwd_parameters, SymmetricNoisyRegressor, BWRun\n",
@@ -241,6 +240,103 @@
     "\n",
     "# define the (optional) method to regress the HMM state from `bw.alpha`\n",
     "# reg = SymmetricNoisyRegressor(input_d=bw.N, output_d=1)\n",
+    "\n",
+    "class Regressor(al.regressions.AutoRegressorMixin, al.regressions.VanillaOnlineRegressor):\n",
+    "    pass\n",
+    "reg = Regressor(input_d=bw.N, output_d=out_ds.output_shape)\n",
+    "# reg = al.regressions.SymmetricNoisyRegressor(input_d=bw.N, output_d=out_ds.output_shape, init_min_ratio=.5)\n",
+    "\n",
+    "class CustomAnimation(AnimationManager):\n",
+    "    n_rows = 1\n",
+    "    n_cols = 3\n",
+    "    figsize = (15,10)\n",
+    "    extension = \"mp4\"\n",
+    "    fps=10\n",
+    "\n",
+    "    def custom_draw_frame(self, step, bw: Bubblewrap, br: BWRun):\n",
+    "        historical_observations, _ = br.input_ds.get_history()\n",
+    "\n",
+    "        al.plotting_functions.show_active_bubbles_and_connections_2d(self.ax[0,1], historical_observations, bw, n_sds=3, history_length=10)\n",
+    "        self.ax[0,1].set_title(f\"Step {step}\")\n",
+    "        al.plotting_functions.show_alpha(self.ax[0,0], br)\n",
+    "        al.plotting_functions.show_behavior(self.ax[0,2], br)\n",
+    "        \n",
+    "    def frame_draw_condition(self, step_number, bw):\n",
+    "        condition = True\n",
+    "        condition = condition and (step_number % 1 == 0)\n",
+    "        condition = condition and (350 < step_number < 2000)\n",
+    "        return condition\n",
+    "        \n",
+    "am = CustomAnimation() if True else None\n",
+    "\n",
+    "br = BWRun(bw=bw, in_ds=in_ds, out_ds=out_ds, behavior_regressor=reg, animation_manager=am, show_tqdm=True, log_level=1)\n",
+    "\n",
+    "br.run(limit=2000, save=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "al.plotting_functions.compare_metrics([br],1)\n",
+    "print(br.output_regressor.get_beta()[:2,:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "al.plotting_functions.compare_metrics([br],1)\n",
+    "print(br.output_regressor.get_beta()[:2,:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "beh[1:] =  * x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "inputs = beh[:-1]\n",
+    "outputs = beh[1:]\n",
+    "beta, res, _, _ = np.linalg.lstsq(inputs, outputs, rcond=None)\n",
+    "ax.plot(t[1:],(inputs @ beta - outputs)**2);\n",
+    "ax.set_xlabel(\"time (s)\")\n",
+    "ax.set_xlabel(\"square error\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in_ds = NumpyTimedDataSource(A, t, time_offsets=(0,1))\n",
+    "out_ds = NumpyTimedDataSource(beh, t, time_offsets=(0,1))\n",
+    "\n",
+    "# define the adaptive_latents object\n",
+    "bw = Bubblewrap(dim=in_ds.output_shape,  **dict(default_rwd_parameters, M=300, num=500, num_grad_q=1))\n",
+    "\n",
+    "# define the (optional) method to regress the HMM state from `bw.alpha`\n",
+    "# reg = SymmetricNoisyRegressor(input_d=bw.N, output_d=1)\n",
     "reg = al.regressions.SymmetricNoisyRegressor(input_d=bw.N, output_d=out_ds.output_shape, init_min_ratio=.5)\n",
     "\n",
     "class CustomAnimation(AnimationManager):\n",
@@ -266,7 +362,7 @@
     "        \n",
     "am = CustomAnimation() if False else None\n",
     "\n",
-    "br = BWRun(bw=bw, obs_ds=in_ds, beh_ds=out_ds, behavior_regressor=reg, animation_manager=am, show_tqdm=True, save_A=True)\n",
+    "br = BWRun(bw=bw, in_ds=in_ds, out_ds=out_ds, behavior_regressor=reg, animation_manager=am, show_tqdm=True, log_level=1)\n",
     "\n",
     "br.run(limit=557,save=True)"
    ]
@@ -274,11 +370,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
-    "historical_observations, _ = br.obs_ds.get_history()\n",
+    "historical_observations, _ = br.input_ds.get_history()\n",
     "n_steps = 15\n",
     "\n",
     "fig, ax = plt.subplots()\n",
@@ -287,7 +383,7 @@
     "\n",
     "ms = []\n",
     "for i in range(n_steps):\n",
-    "    m = np.argmax(br.alpha_history[0][-1-i])\n",
+    "    m = np.argmax(br.model_step_variable_history['alpha'][-1-i])\n",
     "    ms.append(m)\n",
     "\n",
     "for m in set(ms):    \n",
@@ -298,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +602,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20",
+   "id": "25",
    "metadata": {},
    "source": [
     "### Some sort of continuity measure?"
@@ -515,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
