--- a/scripts/regressions.ipynb
+++ b/scripts/regressions.ipynb
@@ -1,8 +1,71 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import adaptive_latents\n",
+    "import numpy as np\n",
+    "\n",
+    "rng = np.random.default_rng()\n",
+    "\n",
+    "\n",
+    "m, n_obs, n_beh = 150 - 10, 3, 4\n",
+    "obs = rng.normal(size=(m, n_obs))\n",
+    "beh = rng.normal(size=(m, n_beh))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "br1 = adaptive_latents.BWRun(\n",
+    "    adaptive_latents.Bubblewrap(3, **adaptive_latents.default_parameters.default_clock_parameters),\n",
+    "    adaptive_latents.NumpyTimedDataSource(obs, None, (0,1)),\n",
+    "    adaptive_latents.NumpyTimedDataSource(beh, None, (0,1)),\n",
+    "    adaptive_latents.SymmetricNoisyRegressor(adaptive_latents.default_parameters.default_clock_parameters['num'], n_beh),\n",
+    "    show_tqdm=False,\n",
+    ")\n",
+    "br1.run(freeze=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "br2 = adaptive_latents.BWRun(\n",
+    "    adaptive_latents.Bubblewrap(3, **adaptive_latents.default_parameters.default_clock_parameters),\n",
+    "    adaptive_latents.NumpyTimedDataSource(obs, None, (0,1)),\n",
+    "    show_tqdm=False,\n",
+    ")\n",
+    "br2.run(freeze=False)\n",
+    "\n",
+    "reg = adaptive_latents.SymmetricNoisyRegressor(br2.bw.N, n_beh)\n",
+    "br2.add_regression_post_hoc(reg, adaptive_latents.NumpyTimedDataSource(beh, None, (0,1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.array(br1.output_step_variable_history['beta']) - np.array(br2.output_step_variable_history['beta'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4",
    "metadata": {},
    "source": [
     "# Imports"
@@ -10,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1",
+   "id": "5",
    "metadata": {},
    "source": [
     "Sometimes the calculations in this notebook run faster if the GPU isn't enabled; I think this is especially true with some of the caching I do, so I usually run the cell below to have JAX run on CPU."
@@ -19,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2",
+   "id": "6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-03T14:41:21.104905Z",
@@ -29,8 +92,6 @@
    },
    "outputs": [],
    "source": [
-    "import jax\n",
-    "jax.config.update('jax_platform_name', 'gpu')\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import adaptive_latents.input_sources.utils as fin\n",
@@ -45,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3",
+   "id": "7",
    "metadata": {
     "tags": []
    },
@@ -67,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5",
+   "id": "9",
    "metadata": {
     "tags": []
    },
@@ -87,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "10",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-03T14:41:29.649130Z",
@@ -129,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "11",
    "metadata": {
     "tags": []
    },
@@ -140,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "12",
    "metadata": {
     "tags": []
    },
@@ -170,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "13",
    "metadata": {
     "tags": []
    },
@@ -181,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "14",
    "metadata": {
     "tags": []
    },
@@ -209,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "15",
    "metadata": {
     "tags": []
    },
@@ -220,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "16",
    "metadata": {
     "tags": []
    },
@@ -243,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "17",
    "metadata": {
     "tags": []
    },
@@ -254,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "18",
    "metadata": {
     "tags": []
    },
@@ -276,7 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "19",
    "metadata": {},
    "source": [
     "# Run Stuff"
@@ -284,7 +345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16",
+   "id": "20",
    "metadata": {
     "tags": []
    },
@@ -296,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "21",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-03T14:41:44.511511Z",
@@ -337,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18",
+   "id": "22",
    "metadata": {
     "tags": []
    },
@@ -349,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "23",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-03T14:42:08.250368Z",
@@ -371,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "24",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-03T14:42:10.383900Z",
@@ -391,7 +452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21",
+   "id": "25",
    "metadata": {},
    "source": [
     "## Run Table"
@@ -400,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "26",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-03T14:42:14.658506Z",
@@ -456,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "27",
    "metadata": {
     "tags": []
    },
@@ -482,9 +543,10 @@
     "    true_values[okey] = {}\n",
     "    for ikey in input_keys:\n",
     "        print(f\"{okey= } {ikey= }\")\n",
-    "        \n",
+    "\n",
+    "        break\n",
     "        br, pred, true, times = evaluate(datasets[ikey], datasets[okey], maxlen=5_000, bw_params=bw_params)\n",
-    "        \n",
+    "\n",
     "        results[okey][ikey] = pred\n",
     "        brs[okey][ikey] = br\n",
     "        true_values[okey][ikey] = (true, times)"
@@ -493,130 +555,107 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# this cell plots the table of results\n",
+    "time_offsets = [1]\n",
+    "input_arr = datasets[ikey][0]\n",
+    "output_arr = datasets[okey][0]\n",
     "\n",
-    "def get_corrs_from_br(br):\n",
-    "    lh_predicted, lh_true, _ = br.get_behavior_last_half(br.obs_ds.time_offsets[-1])\n",
-    "    corrs = [np.corrcoef(lh_true[:,j], lh_predicted[:,j])[0,1] for j in range(lh_true.shape[1])]\n",
-    "    return corrs\n",
+    "out_ds = adaptive_latents.NumpyTimedDataSource(*datasets[okey], time_offsets)\n",
     "\n",
-    "fig, ax = plt.subplots(nrows=1, ncols=len(input_keys), figsize=(14,2), layout='tight', squeeze=False)\n",
-    "\n",
-    "s = slice(-1)\n",
-    "\n",
-    "row=0\n",
-    "okey = output_keys[0]\n",
-    "ax[row,0].set_ylabel(\"log $|Q|$\")\n",
-    "\n",
-    "for col, ikey in enumerate(input_keys):\n",
-    "    # true, times, predicted = fin.clip(*true_values[okey][ikey], results[okey][ikey])\n",
-    "    \n",
-    "    br = brs[okey][ikey]\n",
-    "    ax[row,col].plot(np.log(np.abs(br.h.Q)))\n",
-    "    # corrs = get_corrs_from_br(br)\n",
-    "\n",
-    "    # ax[row,col].plot(true[s])\n",
-    "    # ax[row,col].plot(predicted[s])\n",
-    "    \n",
-    "    # if true.shape[1] < 4:\n",
-    "    #     corrs = \" \".join([f\"{c:.2f}\" for c in corrs])\n",
-    "    # else:\n",
-    "    #     corrs = f\"{np.mean(corrs):.3f}\"\n",
-    "    # ax[row,col].text(.01,.99, corrs, ha='left', va='top', transform=ax[row, col].transAxes)\n",
-    "    if row == 0:\n",
-    "        ax[0,col].set_title(ikey +  \"→\")"
+    "bw = adaptive_latents.Bubblewrap(input_arr.shape[1], **adaptive_latents.default_parameters.default_jpca_dataset_parameters)\n",
+    "br1 = adaptive_latents.BWRun(bw, \n",
+    "                            in_ds=adaptive_latents.NumpyTimedDataSource(*datasets[ikey], time_offsets), \n",
+    "                            out_ds= out_ds,\n",
+    "                            behavior_regressor = adaptive_latents.regressions.VanillaOnlineRegressor(bw.N, output_arr.shape[1]),\n",
+    "                            show_tqdm=True)\n",
+    "br1.run(save=True, limit=3000)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# this cell plots the table of results\n",
+    "time_offsets = [1]\n",
+    "input_arr = datasets[ikey][0]\n",
+    "output_arr = datasets[okey][0]\n",
     "\n",
-    "def get_corrs_from_br(br):\n",
-    "    lh_predicted, lh_true, _ = br.get_behavior_last_half(br.obs_ds.time_offsets[-1])\n",
-    "    corrs = [np.corrcoef(lh_true[:,j], lh_predicted[:,j])[0,1] for j in range(lh_true.shape[1])]\n",
-    "    return corrs\n",
+    "out_ds = adaptive_latents.NumpyTimedDataSource(*datasets[okey], time_offsets)\n",
     "\n",
-    "fig, ax = plt.subplots(nrows=1, ncols=len(input_keys), figsize=(14,2), layout='tight', squeeze=False)\n",
+    "bw = adaptive_latents.Bubblewrap(input_arr.shape[1], **adaptive_latents.default_parameters.default_jpca_dataset_parameters)\n",
+    "br2 = adaptive_latents.BWRun(bw, \n",
+    "                            in_ds=adaptive_latents.NumpyTimedDataSource(*datasets[ikey], time_offsets), \n",
+    "                            # out_ds= out_ds,\n",
+    "                            # behavior_regressor = adaptive_latents.regressions.VanillaOnlineRegressor(bw.N, output_arr.shape[1]),\n",
+    "                            show_tqdm=True)\n",
+    "br2.run(save=True, limit=3000)\n",
     "\n",
-    "s = slice(-1)\n",
+    "reg = adaptive_latents.regressions.VanillaOnlineRegressor(bw.N, output_arr.shape[1])\n",
     "\n",
-    "row=0\n",
-    "okey = output_keys[0]\n",
-    "ax[row,0].set_ylabel(\"log $|Q|$\")\n",
-    "\n",
-    "for col, ikey in enumerate(input_keys):\n",
-    "    # true, times, predicted = fin.clip(*true_values[okey][ikey], results[okey][ikey])\n",
-    "    \n",
-    "    br = brs[okey][ikey]\n",
-    "    ax[row,col].plot(np.log(np.abs(br.h.Q)))\n",
-    "    # corrs = get_corrs_from_br(br)\n",
-    "\n",
-    "    # ax[row,col].plot(true[s])\n",
-    "    # ax[row,col].plot(predicted[s])\n",
-    "    \n",
-    "    # if true.shape[1] < 4:\n",
-    "    #     corrs = \" \".join([f\"{c:.2f}\" for c in corrs])\n",
-    "    # else:\n",
-    "    #     corrs = f\"{np.mean(corrs):.3f}\"\n",
-    "    # ax[row,col].text(.01,.99, corrs, ha='left', va='top', transform=ax[row, col].transAxes)\n",
-    "    if row == 0:\n",
-    "        ax[0,col].set_title(ikey +  \"→\")"
+    "br2.add_regression_post_hoc(reg, out_ds)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# this cell plots the table of results\n",
-    "\n",
-    "def get_corrs_from_br(br):\n",
-    "    lh_predicted, lh_true, _ = br.get_behavior_last_half(br.obs_ds.time_offsets[-1])\n",
-    "    corrs = [np.corrcoef(lh_true[:,j], lh_predicted[:,j])[0,1] for j in range(lh_true.shape[1])]\n",
-    "    return corrs\n",
-    "\n",
-    "fig, ax = plt.subplots(nrows=1, ncols=len(input_keys), figsize=(14,2), layout='tight', squeeze=False)\n",
-    "\n",
-    "s = slice(-1)\n",
-    "\n",
-    "row=0\n",
-    "okey = output_keys[0]\n",
-    "ax[row,0].set_ylabel(\"log $|Q|$\")\n",
-    "\n",
-    "for col, ikey in enumerate(input_keys):\n",
-    "    # true, times, predicted = fin.clip(*true_values[okey][ikey], results[okey][ikey])\n",
-    "    \n",
-    "    br = brs[okey][ikey]\n",
-    "    ax[row,col].plot(np.log(np.abs(br.h.Q)))\n",
-    "    # corrs = get_corrs_from_br(br)\n",
-    "\n",
-    "    # ax[row,col].plot(true[s])\n",
-    "    # ax[row,col].plot(predicted[s])\n",
-    "    \n",
-    "    # if true.shape[1] < 4:\n",
-    "    #     corrs = \" \".join([f\"{c:.2f}\" for c in corrs])\n",
-    "    # else:\n",
-    "    #     corrs = f\"{np.mean(corrs):.3f}\"\n",
-    "    # ax[row,col].text(.01,.99, corrs, ha='left', va='top', transform=ax[row, col].transAxes)\n",
-    "    if row == 0:\n",
-    "        ax[0,col].set_title(ikey +  \"→\")"
+    "br1.h.bw_t[2] - br1.h.reg_offset_t[1][0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "br1.h.reg_offset_t[1].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_offsets = [1]\n",
+    "input_arr = datasets[ikey][0]\n",
+    "output_arr = datasets[okey][0]\n",
+    "\n",
+    "out_ds = adaptive_latents.NumpyTimedDataSource(*datasets[okey], time_offsets)\n",
+    "\n",
+    "bw = adaptive_latents.Bubblewrap(input_arr.shape[1], **adaptive_latents.default_parameters.default_jpca_dataset_parameters)\n",
+    "br2 = adaptive_latents.BWRun(bw, \n",
+    "                            in_ds=adaptive_latents.NumpyTimedDataSource(*datasets[ikey], time_offsets), \n",
+    "                            out_ds= adaptive_latents.NumpyTimedDataSource(*datasets[okey], time_offsets),\n",
+    "                            behavior_regressor = adaptive_latents.regressions.VanillaOnlineRegressor(bw.N, output_arr.shape[1]),\n",
+    "                            show_tqdm=True)\n",
+    "br2.run(save=True, limit=3000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "br1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +693,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28",
+   "id": "35",
    "metadata": {
     "tags": []
    },
@@ -665,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "36",
    "metadata": {
     "tags": []
    },
@@ -677,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "37",
    "metadata": {
     "tags": []
    },
@@ -689,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "38",
    "metadata": {
     "tags": []
    },
@@ -708,7 +747,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "39",
    "metadata": {
     "tags": []
    },
@@ -723,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "40",
    "metadata": {
     "tags": []
    },
@@ -736,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "41",
    "metadata": {
     "tags": []
    },
@@ -748,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "42",
    "metadata": {
     "tags": []
    },
@@ -766,7 +805,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36",
+   "id": "43",
    "metadata": {},
    "source": [
     "## Optimizing parameters"
@@ -775,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "44",
    "metadata": {
     "tags": []
    },
@@ -787,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "45",
    "metadata": {
     "tags": []
    },
@@ -799,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "47",
    "metadata": {
     "tags": []
    },
@@ -834,7 +873,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41",
+   "id": "48",
    "metadata": {
     "tags": []
    },
@@ -845,7 +884,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "49",
    "metadata": {
     "tags": []
    },
@@ -857,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "50",
    "metadata": {
     "tags": []
    },
@@ -870,7 +909,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "51",
    "metadata": {
     "tags": []
    },
@@ -892,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "52",
    "metadata": {
     "tags": []
    },
@@ -904,7 +943,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "53",
    "metadata": {
     "tags": []
    },
@@ -926,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "54",
    "metadata": {
     "tags": []
    },
@@ -942,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "55",
    "metadata": {
     "tags": []
    },
@@ -959,7 +998,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "56",
    "metadata": {
     "tags": []
    },
