--- a/scripts/svd.ipynb
+++ b/scripts/svd.ipynb
@@ -13,7 +13,10 @@
     "from scipy.linalg import block_diag\n",
     "import scipy\n",
     "import matplotlib.pyplot as plt\n",
-    "from proSVD import proSVD\n",
+    "from adaptive_latents.transforms import proSVD\n",
+    "from adaptive_latents.transforms.jpca import align_column_spaces\n",
+    "from tqdm import tqdm\n",
+    "\n",
     "from functools import reduce\n",
     "\n",
     "rng = np.random.default_rng()"
@@ -23,6 +26,124 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def column_space_distance(Q1, Q2):\n",
+    "    return (((Q1 @ Q1.T) - (Q2 @ Q2.T))**2).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diffs = []\n",
+    "for _ in tqdm(range(5000)):\n",
+    "    d = np.ones(8)\n",
+    "    d[0] = 1.3\n",
+    "    d[-1] = 10\n",
+    "    d = np.diag(d)\n",
+    "    \n",
+    "    data = [\n",
+    "        d[:-3,:-3] @ rng.normal(size=(5,20)),\n",
+    "        d @ rng.normal(size=(8,8)),\n",
+    "        d @ rng.normal(size=(8,20)),\n",
+    "        ]\n",
+    "    \n",
+    "    \n",
+    "    psvd1 = proSVD(2)\n",
+    "    psvd2 = proSVD(2)\n",
+    "    \n",
+    "    psvd1.initialize(data[1])\n",
+    "    for i in np.arange(data[2].shape[1]):\n",
+    "        psvd1.updateSVD(data[2][:,i:i+1])\n",
+    "    \n",
+    "    psvd2.initialize(data[0])\n",
+    "    psvd2.add_new_input_channels(3)\n",
+    "    for j in [1,2]:\n",
+    "        for i in np.arange(data[j].shape[1]):\n",
+    "            psvd2.updateSVD(data[j][:, i:i + 1])\n",
+    "    \n",
+    "    ideal_basis = np.zeros((8,2))\n",
+    "    ideal_basis[0,0] = 1\n",
+    "    ideal_basis[-1, 1] = 1\n",
+    "\n",
+    "    diff = column_space_distance(psvd1.Q, ideal_basis) - column_space_distance(psvd2.Q, ideal_basis)\n",
+    "    diffs.append(diff)\n",
+    "diffs = np.array(diffs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "ax.hist(diffs, 100);\n",
+    "ax.axvline(0,color='k')\n",
+    "ax.set_xlabel(\"old method error - new method error\")\n",
+    "ax.set_ylabel(\"counts\")\n",
+    "ax.set_title(f\"improvement in {np.mean(diffs > 0)*100 :.1f}% of cases\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axs = plt.subplots(ncols=1)\n",
+    "axs.imshow(psvd2.Q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.std(np.hstack(data[1:]),1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.std(np.hstack(data[0:1]),1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.linalg.norm(Q2[:,0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8",
+   "metadata": {},
+   "source": [
+    "# old"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "15",
    "metadata": {},
    "source": [
     "$$\n",
@@ -173,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "16",
    "metadata": {},
    "source": [
     "## Visualization"
@@ -182,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "23",
    "metadata": {},
    "source": [
     "# Biased proSVD"
@@ -360,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +562,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +650,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +661,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24",
+   "id": "32",
    "metadata": {},
    "source": [
     "# real data"
@@ -549,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -616,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +827,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37",
+   "id": "45",
    "metadata": {},
    "source": [
     "### Procrustes"
@@ -715,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "46",
    "metadata": {
     "tags": []
    },
@@ -727,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "47",
    "metadata": {
     "tags": []
    },
@@ -740,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "48",
    "metadata": {
     "tags": []
    },
@@ -772,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "49",
    "metadata": {
     "tags": []
    },
@@ -786,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "50",
    "metadata": {
     "tags": []
    },
