adds a proSVD test and improves the compare_metrics function

--- a/scripts/profiling.ipynb
+++ b/scripts/profiling.ipynb
@@ -25,7 +25,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mat = loadmat(al.CONFIG['data_path'] / 'Chestek' / 'first_extraction.mat', squeeze_me=True, simplify_cells=True)\n",
+    "al.CONFIG['data_path'] / 'Chestek' / 'first_extraction.mat'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mat = loadmat(al.CONFIG['data_path'] / 'Chestek' / 'jgould_first_extraction.mat', squeeze_me=True, simplify_cells=True)\n",
     "pre_smooth_beh = mat[\"feats\"][1]\n",
     "pre_smooth_A = mat[\"feats\"][0]\n",
     "pre_smooth_t = mat[\"feats\"][2] / 1000\n",
@@ -45,11 +55,11 @@
     "pre_prosvd_t = np.convolve(np.hstack([[1],kernel[:-1]*0]), pre_smooth_t, mode)\n",
     "pre_prosvd_beh = pre_smooth_beh\n",
     "\n",
-    "pre_prosvd_A = al.input_sources.functional.center_from_first_n(pre_prosvd_A, 100)\n",
-    "pre_prosvd_A, pre_prosvd_beh, pre_prosvd_t = al.input_sources.functional.clip(pre_prosvd_A, pre_prosvd_beh, pre_prosvd_t)\n",
+    "pre_prosvd_A = al.transforms.utils.center_from_first_n(pre_prosvd_A, 100)\n",
+    "pre_prosvd_A, pre_prosvd_beh, pre_prosvd_t = al.transforms.utils.clip(pre_prosvd_A, pre_prosvd_beh, pre_prosvd_t)\n",
     "\n",
-    "pre_jpca_A, Qs = al.input_sources.functional.prosvd_data_with_Qs(pre_prosvd_A, 4, 50)\n",
-    "pre_jpca_A, pre_jpca_t, pre_jpca_beh = al.input_sources.functional.clip(pre_jpca_A, pre_prosvd_t, pre_prosvd_beh)\n",
+    "pre_jpca_A, Qs = al.transforms.utils.prosvd_data_with_Qs(pre_prosvd_A, 4, 50)\n",
+    "pre_jpca_A, pre_jpca_t, pre_jpca_beh = al.transforms.utils.clip(pre_jpca_A, pre_prosvd_t, pre_prosvd_beh)\n",
     "\n",
     "A, beh, t = pre_jpca_A, pre_jpca_beh, pre_jpca_t"
    ]
@@ -57,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +123,7 @@
     "ax.plot(np.arange(good_slice.shape[1])+slice_start, good_slice.T, label=keys)\n",
     "ax.set_xlabel(\"iteration #\");\n",
     "ax.set_ylabel(\"iteration time (ms)\")\n",
-    "ax.set_ylim([0,60])\n",
+    "ax.set_ylim([0,100])\n",
     "ax.legend();"
    ]
   }
