--- a/scripts/regressions.ipynb
+++ b/scripts/regressions.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import adaptive_latents.input_sources.utils as fin\n",
+    "import adaptive_latents.transforms.utils as fin\n",
     "import tqdm as tqdm\n",
     "from adaptive_latents import NumpyTimedDataSource\n",
     "import adaptive_latents.plotting_functions as bpf\n",
@@ -186,23 +186,20 @@
    "outputs": [],
    "source": [
     "if dataset_chosen == \"indy\":\n",
-    "    obs, raw_behavior, bin_centers, beh_t = adaptive_latents.input_sources.datasets.construct_indy_data(\n",
+    "    obs, beh, bin_centers, beh_t = adaptive_latents.input_sources.datasets.construct_indy_data(\n",
     "        adaptive_latents.input_sources.datasets.individual_identifiers[\"indy\"][0],\n",
     "        bin_width=0.03,\n",
     "    )\n",
     "    \n",
-    "    resampled_behavior = fin.resample_matched_timeseries(raw_behavior, bin_centers, beh_t)\n",
-    "    beh = resampled_behavior\n",
+    "    resampled_behavior = fin.resample_matched_timeseries(beh, bin_centers, beh_t)\n",
+    "    beh, beh_t = resampled_behavior, bin_centers\n",
     "    \n",
     "    pre_datasets = {\n",
-    "        'beh # i o': beh,\n",
-    "        's([obs,beh],6) # i': fin.prosvd_data(input_arr=np.hstack([obs, beh]), output_d=6, init_size=20),\n",
-    "        's(obs,6) # i o': fin.prosvd_data(input_arr=obs, output_d=6, init_size=30),\n",
+    "        'beh # i o': [beh, beh_t],\n",
+    "        # 's([obs,beh],6) # i': fin.prosvd_data(input_arr=np.hstack([obs, beh]), output_d=6, init_size=20),\n",
+    "        's(obs,6) # i o': fin.clip(fin.prosvd_data(input_arr=obs, output_d=6, init_size=30), bin_centers),\n",
     "    \n",
-    "    }\n",
-    "    \n",
-    "    for key, value in pre_datasets.items():\n",
-    "        pre_datasets[key] = fin.clip(value, beh_t)"
+    "    }"
    ]
   },
   {
@@ -443,7 +440,7 @@
     "    \n",
     "    \n",
     "    out_ds = adaptive_latents.NumpyTimedDataSource(o, o_t, (n_steps,))\n",
-    "    reg_class = adaptive_latents.regressions.auto_regression_decorator(adaptive_latents.regressions.SymmetricNoisyRegressor, n_steps=0, autoregress_only=True)\n",
+    "    reg_class = adaptive_latents.regressions.auto_regression_decorator(adaptive_latents.regressions.SymmetricNoisyRegressor, n_steps=1, autoregress_only=False)\n",
     "    reg = reg_class(input_d=br.bw.N, output_d=o.shape[1])\n",
     "    \n",
     "    br.add_regression_post_hoc(reg, out_ds)\n",
@@ -502,146 +499,8 @@
     "def get_corrs_from_br(br):\n",
     "    offset = br.output_ds.time_offsets[-1]\n",
     "    \n",
-    "    first_pred_idx = np.nonzero(~np.all(np.isnan(br.h.beh_error[1]),axis=1))[0][0]\n",
-    "    n_samples_before_end = (br.h.beh_error[1].shape[0] - first_pred_idx)//2\n",
-    "    \n",
-    "    lh_predicted = br.h.beh_pred[offset][-n_samples_before_end:]\n",
-    "    lh_true = br.h.beh_pred[offset][-n_samples_before_end:] - br.h.beh_error[offset][-n_samples_before_end:]\n",
-    "    \n",
-    "    corrs = [np.corrcoef(lh_true[:,j], lh_predicted[:,j])[0,1] for j in range(lh_true.shape[1])]\n",
-    "    return corrs\n",
-    "\n",
-    "fig, ax = plt.subplots(nrows=len(output_keys), ncols=len(input_keys), figsize=(14,2*len(output_keys)), layout='tight', squeeze=False)\n",
-    "\n",
-    "s = slice(-1)\n",
-    "\n",
-    "for row, okey in enumerate(output_keys):\n",
-    "    ax[row,0].set_ylabel(\"→\" + okey)\n",
-    "    for col, ikey in enumerate(input_keys):\n",
-    "        true, times, predicted = fin.clip(*true_values[okey][ikey], results[okey][ikey])\n",
-    "        \n",
-    "        br = brs[okey][ikey]\n",
-    "\n",
-    "        corrs = get_corrs_from_br(br)\n",
-    "\n",
-    "        ax[row,col].plot(true[s])\n",
-    "        ax[row,col].plot(predicted[s])\n",
-    "        \n",
-    "        if true.shape[1] < 4:\n",
-    "            corrs = \" \".join([f\"{c:.2f}\" for c in corrs])\n",
-    "        else:\n",
-    "            corrs = f\"{np.mean(corrs):.3f}\"\n",
-    "        ax[row,col].text(.01,.99, corrs, ha='left', va='top', transform=ax[row, col].transAxes)\n",
-    "        if row == 0:\n",
-    "            ax[0,col].set_title(ikey +  \"→\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# this cell plots the table of results\n",
-    "\n",
-    "def get_corrs_from_br(br):\n",
-    "    offset = br.output_ds.time_offsets[-1]\n",
-    "    \n",
-    "    first_pred_idx = np.nonzero(~np.all(np.isnan(br.h.beh_error[1]),axis=1))[0][0]\n",
-    "    n_samples_before_end = (br.h.beh_error[1].shape[0] - first_pred_idx)//2\n",
-    "    \n",
-    "    lh_predicted = br.h.beh_pred[offset][-n_samples_before_end:]\n",
-    "    lh_true = br.h.beh_pred[offset][-n_samples_before_end:] - br.h.beh_error[offset][-n_samples_before_end:]\n",
-    "    \n",
-    "    corrs = [np.corrcoef(lh_true[:,j], lh_predicted[:,j])[0,1] for j in range(lh_true.shape[1])]\n",
-    "    return corrs\n",
-    "\n",
-    "fig, ax = plt.subplots(nrows=len(output_keys), ncols=len(input_keys), figsize=(14,2*len(output_keys)), layout='tight', squeeze=False)\n",
-    "\n",
-    "s = slice(-1)\n",
-    "\n",
-    "for row, okey in enumerate(output_keys):\n",
-    "    ax[row,0].set_ylabel(\"→\" + okey)\n",
-    "    for col, ikey in enumerate(input_keys):\n",
-    "        true, times, predicted = fin.clip(*true_values[okey][ikey], results[okey][ikey])\n",
-    "        \n",
-    "        br = brs[okey][ikey]\n",
-    "\n",
-    "        corrs = get_corrs_from_br(br)\n",
-    "\n",
-    "        ax[row,col].plot(true[s])\n",
-    "        ax[row,col].plot(predicted[s])\n",
-    "        \n",
-    "        if true.shape[1] < 4:\n",
-    "            corrs = \" \".join([f\"{c:.2f}\" for c in corrs])\n",
-    "        else:\n",
-    "            corrs = f\"{np.mean(corrs):.3f}\"\n",
-    "        ax[row,col].text(.01,.99, corrs, ha='left', va='top', transform=ax[row, col].transAxes)\n",
-    "        if row == 0:\n",
-    "            ax[0,col].set_title(ikey +  \"→\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "26",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# this cell plots the table of results\n",
-    "\n",
-    "def get_corrs_from_br(br):\n",
-    "    offset = br.output_ds.time_offsets[-1]\n",
-    "    \n",
-    "    first_pred_idx = np.nonzero(~np.all(np.isnan(br.h.beh_error[1]),axis=1))[0][0]\n",
-    "    n_samples_before_end = (br.h.beh_error[1].shape[0] - first_pred_idx)//2\n",
-    "    \n",
-    "    lh_predicted = br.h.beh_pred[offset][-n_samples_before_end:]\n",
-    "    lh_true = br.h.beh_pred[offset][-n_samples_before_end:] - br.h.beh_error[offset][-n_samples_before_end:]\n",
-    "    \n",
-    "    corrs = [np.corrcoef(lh_true[:,j], lh_predicted[:,j])[0,1] for j in range(lh_true.shape[1])]\n",
-    "    return corrs\n",
-    "\n",
-    "fig, ax = plt.subplots(nrows=len(output_keys), ncols=len(input_keys), figsize=(14,2*len(output_keys)), layout='tight', squeeze=False)\n",
-    "\n",
-    "s = slice(-1)\n",
-    "\n",
-    "for row, okey in enumerate(output_keys):\n",
-    "    ax[row,0].set_ylabel(\"→\" + okey)\n",
-    "    for col, ikey in enumerate(input_keys):\n",
-    "        true, times, predicted = fin.clip(*true_values[okey][ikey], results[okey][ikey])\n",
-    "        \n",
-    "        br = brs[okey][ikey]\n",
-    "\n",
-    "        corrs = get_corrs_from_br(br)\n",
-    "\n",
-    "        ax[row,col].plot(true[s])\n",
-    "        ax[row,col].plot(predicted[s])\n",
-    "        \n",
-    "        if true.shape[1] < 4:\n",
-    "            corrs = \" \".join([f\"{c:.2f}\" for c in corrs])\n",
-    "        else:\n",
-    "            corrs = f\"{np.mean(corrs):.3f}\"\n",
-    "        ax[row,col].text(.01,.99, corrs, ha='left', va='top', transform=ax[row, col].transAxes)\n",
-    "        if row == 0:\n",
-    "            ax[0,col].set_title(ikey +  \"→\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# this cell plots the table of results\n",
-    "\n",
-    "def get_corrs_from_br(br):\n",
-    "    offset = br.output_ds.time_offsets[-1]\n",
-    "    \n",
-    "    first_pred_idx = np.nonzero(~np.all(np.isnan(br.h.beh_error[1]),axis=1))[0][0]\n",
-    "    n_samples_before_end = (br.h.beh_error[1].shape[0] - first_pred_idx)//2\n",
+    "    first_pred_idx = np.nonzero(~np.all(np.isnan(br.h.beh_error[offset]),axis=1))[0][0]\n",
+    "    n_samples_before_end = (br.h.beh_error[offset].shape[0] - first_pred_idx)//2\n",
     "    \n",
     "    lh_predicted = br.h.beh_pred[offset][-n_samples_before_end:]\n",
     "    lh_true = br.h.beh_pred[offset][-n_samples_before_end:] - br.h.beh_error[offset][-n_samples_before_end:]\n",
@@ -676,7 +535,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28",
+   "id": "25",
    "metadata": {
     "tags": []
    },
@@ -687,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "26",
    "metadata": {
     "tags": []
    },
@@ -699,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "27",
    "metadata": {
     "tags": []
    },
@@ -711,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "28",
    "metadata": {
     "tags": []
    },
@@ -730,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "29",
    "metadata": {
     "tags": []
    },
@@ -745,7 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "30",
    "metadata": {
     "tags": []
    },
@@ -758,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "31",
    "metadata": {
     "tags": []
    },
@@ -770,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "32",
    "metadata": {
     "tags": []
    },
@@ -788,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36",
+   "id": "33",
    "metadata": {},
    "source": [
     "## Optimizing parameters"
@@ -797,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "34",
    "metadata": {
     "tags": []
    },
@@ -809,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "35",
    "metadata": {
     "tags": []
    },
@@ -821,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "37",
    "metadata": {
     "tags": []
    },
@@ -856,7 +715,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41",
+   "id": "38",
    "metadata": {
     "tags": []
    },
@@ -867,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "39",
    "metadata": {
     "tags": []
    },
@@ -879,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "40",
    "metadata": {
     "tags": []
    },
@@ -892,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "41",
    "metadata": {
     "tags": []
    },
@@ -914,7 +773,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "42",
    "metadata": {
     "tags": []
    },
@@ -926,7 +785,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "43",
    "metadata": {
     "tags": []
    },
@@ -948,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "44",
    "metadata": {
     "tags": []
    },
@@ -964,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "45",
    "metadata": {
     "tags": []
    },
@@ -981,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "46",
    "metadata": {
     "tags": []
    },
