--- a/scripts/svd.ipynb
+++ b/scripts/svd.ipynb
@@ -30,7 +30,8 @@
    "outputs": [],
    "source": [
     "def column_space_distance(Q1, Q2):\n",
-    "    return (((Q1 @ Q1.T) - (Q2 @ Q2.T))**2).sum()"
+    "    Q1_rotated, Q2 = align_column_spaces(Q1, Q2)\n",
+    "    return np.linalg.norm(Q1_rotated - Q2)"
    ]
   },
   {
@@ -40,40 +41,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diffs = []\n",
-    "for _ in tqdm(range(5000)):\n",
-    "    d = np.ones(8)\n",
-    "    d[0] = 1.3\n",
-    "    d[-1] = 10\n",
-    "    d = np.diag(d)\n",
+    "def get_improvement_sample(n_samples=100, n1=4,n2=5,k=2):\n",
+    "    errors = [[],[]]\n",
+    "    for _ in range(n_samples):\n",
+    "        d = np.ones(n2)\n",
+    "        d[0] = 1.3\n",
+    "        d[-1] = 10\n",
+    "        d = np.diag(d)\n",
+    "        sub_d = d[:-(n2-n1),:-(n2-n1)] if n1 != n2 else d\n",
+    "        \n",
+    "        data = [\n",
+    "            sub_d @ rng.normal(size=(n1,n1)),\n",
+    "            sub_d @ rng.normal(size=(n1,5)),\n",
+    "            d @ rng.normal(size=(n2,n2)),\n",
+    "            d @ rng.normal(size=(n2,5)),\n",
+    "            ]\n",
+    "        \n",
+    "        \n",
+    "        psvd1 = proSVD(k)\n",
+    "        psvd2 = proSVD(k)\n",
+    "        \n",
+    "        psvd1.initialize(data[2])\n",
+    "        for i in np.arange(data[3].shape[1]):\n",
+    "            psvd1.updateSVD(data[3][:,i:i+1])\n",
+    "        \n",
+    "        psvd2.initialize(data[0])\n",
+    "        for i in np.arange(data[1].shape[1]):\n",
+    "                psvd2.updateSVD(data[1][:, i:i + 1])\n",
+    "            \n",
+    "        psvd2.add_new_input_channels(n2-n1)\n",
+    "        for j in [2,3]:\n",
+    "            for i in np.arange(data[j].shape[1]):\n",
+    "                psvd2.updateSVD(data[j][:, i:i + 1])\n",
+    "        \n",
+    "        ideal_basis = np.zeros((n2,2))\n",
+    "        ideal_basis[0,0] = 1\n",
+    "        ideal_basis[-1, 1] = 1\n",
     "    \n",
-    "    data = [\n",
-    "        d[:-3,:-3] @ rng.normal(size=(5,20)),\n",
-    "        d @ rng.normal(size=(8,8)),\n",
-    "        d @ rng.normal(size=(8,20)),\n",
-    "        ]\n",
-    "    \n",
-    "    \n",
-    "    psvd1 = proSVD(2)\n",
-    "    psvd2 = proSVD(2)\n",
-    "    \n",
-    "    psvd1.initialize(data[1])\n",
-    "    for i in np.arange(data[2].shape[1]):\n",
-    "        psvd1.updateSVD(data[2][:,i:i+1])\n",
-    "    \n",
-    "    psvd2.initialize(data[0])\n",
-    "    psvd2.add_new_input_channels(3)\n",
-    "    for j in [1,2]:\n",
-    "        for i in np.arange(data[j].shape[1]):\n",
-    "            psvd2.updateSVD(data[j][:, i:i + 1])\n",
-    "    \n",
-    "    ideal_basis = np.zeros((8,2))\n",
-    "    ideal_basis[0,0] = 1\n",
-    "    ideal_basis[-1, 1] = 1\n",
+    "        errors[0].append(column_space_distance(psvd1.Q, ideal_basis))\n",
+    "        errors[1].append(column_space_distance(psvd2.Q, ideal_basis))\n",
+    "    errors = np.array(errors)\n",
+    "    diff = errors[0] - errors[1]\n",
+    "    return (errors[0] - errors[1] > 0).mean(), diff.mean()\n",
     "\n",
-    "    diff = column_space_distance(psvd1.Q, ideal_basis) - column_space_distance(psvd2.Q, ideal_basis)\n",
-    "    diffs.append(diff)\n",
-    "diffs = np.array(diffs)"
+    "\n",
+    "stats = np.array([get_improvement_sample(50, n1=4, n2=10, k=2) for _ in tqdm(range(500))])"
    ]
   },
   {
@@ -83,6 +95,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "i = 0\n",
+    "plt.hist(stats[:,i],100);\n",
+    "(stats[:,i] > [.5, 0][i]).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 1\n",
+    "plt.hist(stats[:,i],100);\n",
+    "(stats[:,i] > [.5, 0][i]).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diffs = (method_errors[0] - method_errors[1])\n",
     "fig, ax = plt.subplots()\n",
     "ax.hist(diffs, 100);\n",
     "ax.axvline(0,color='k')\n",
@@ -94,7 +131,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist2d(method_errors[0][:,1], method_errors[1][:,1], 20);\n",
+    "plt.axis('equal');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "11",
    "metadata": {},
    "source": [
     "# old"
@@ -143,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "18",
    "metadata": {},
    "source": [
     "$$\n",
@@ -294,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16",
+   "id": "19",
    "metadata": {},
    "source": [
     "## Visualization"
@@ -303,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23",
+   "id": "26",
    "metadata": {},
    "source": [
     "# Biased proSVD"
@@ -481,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +709,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32",
+   "id": "35",
    "metadata": {},
    "source": [
     "# real data"
@@ -670,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +785,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +798,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,7 +875,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45",
+   "id": "48",
    "metadata": {},
    "source": [
     "### Procrustes"
@@ -836,7 +884,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "49",
    "metadata": {
     "tags": []
    },
@@ -848,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "50",
    "metadata": {
     "tags": []
    },
@@ -861,7 +909,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "51",
    "metadata": {
     "tags": []
    },
@@ -893,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "52",
    "metadata": {
     "tags": []
    },
@@ -907,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50",
+   "id": "53",
    "metadata": {
     "tags": []
    },
