adds a script to profile the pipeline

--- a/scripts/profiling.ipynb
+++ b/scripts/profiling.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import sys\n",
     "sys.path.append('/home/jgould/Documents/AdaptiveLatents/tests')\n",
-    "from test_speed import get_speed_over_time\n",
+    "from test_speed import get_speed_per_step, get_speed_by_time\n",
     "\n",
     "import adaptive_latents as al\n",
     "from scipy.io import loadmat\n",
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "al.CONFIG['data_path'] / 'Chestek' / 'first_extraction.mat'"
+    "A, beh, t, _ = al.input_sources.datasets.construct_unpublished24_data()"
    ]
   },
   {
@@ -35,33 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mat = loadmat(al.CONFIG['data_path'] / 'Chestek' / 'jgould_first_extraction.mat', squeeze_me=True, simplify_cells=True)\n",
-    "pre_smooth_beh = mat[\"feats\"][1]\n",
-    "pre_smooth_A = mat[\"feats\"][0]\n",
-    "pre_smooth_t = mat[\"feats\"][2] / 1000\n",
-    "\n",
-    "pre_smooth_beh = pre_smooth_beh.reshape((pre_smooth_beh.shape[0], 3, 5))\n",
-    "\n",
-    "nonzero_columns = pre_smooth_beh.std(axis=0) > 0\n",
-    "assert np.all(~(nonzero_columns[0,:] ^ nonzero_columns)) # checks that fingers always have the same values\n",
-    "pre_smooth_beh = pre_smooth_beh[:,:,nonzero_columns[0,:]] # the booleans select for position, velocity, and acceleration\n",
-    "pre_smooth_beh = pre_smooth_beh[:, [True, False, False], :].reshape(pre_smooth_beh.shape[0], -1) # the three booleans select for position, velocity, and acceleration\n",
-    "\n",
-    "mode = 'valid'\n",
-    "kernel = np.exp(np.linspace(0,-1,5))\n",
-    "kernel /= kernel.sum()\n",
-    "\n",
-    "pre_prosvd_A = np.column_stack([np.convolve(kernel, column, mode) for column in pre_smooth_A.T])\n",
-    "pre_prosvd_t = np.convolve(np.hstack([[1],kernel[:-1]*0]), pre_smooth_t, mode)\n",
-    "pre_prosvd_beh = pre_smooth_beh\n",
-    "\n",
-    "pre_prosvd_A = al.transforms.utils.center_from_first_n(pre_prosvd_A, 100)\n",
-    "pre_prosvd_A, pre_prosvd_beh, pre_prosvd_t = al.transforms.utils.clip(pre_prosvd_A, pre_prosvd_beh, pre_prosvd_t)\n",
-    "\n",
-    "pre_jpca_A, Qs = al.transforms.utils.prosvd_data_with_Qs(pre_prosvd_A, 4, 50)\n",
-    "pre_jpca_A, pre_jpca_t, pre_jpca_beh = al.transforms.utils.clip(pre_jpca_A, pre_prosvd_t, pre_prosvd_beh)\n",
-    "\n",
-    "A, beh, t = pre_jpca_A, pre_jpca_beh, pre_jpca_t"
+    "# times_dict = get_speed_per_step(A, beh, bw_params=dict(num=1000), max_steps=2000)\n"
    ]
   },
   {
@@ -71,7 +45,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "times_dict = get_speed_over_time(pre_prosvd_A, pre_prosvd_beh, bw_params=dict(num=1000), max_steps=2000)"
+    "t = get_speed_by_time(A, beh, bw_params=dict(num=1000), max_steps=2000)\n",
+    "plt.plot((t[:-1] - t[0])*1000,np.diff(t)*1000);\n",
+    "plt.ylim([0, 70]);"
    ]
   },
   {
@@ -92,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.hist(times.sum(axis=0), np.linspace(0,20,101));"
+    "plt.hist(times.sum(axis=0), np.linspace(7,65,101));"
    ]
   },
   {
