--- a/scripts/regressions.ipynb
+++ b/scripts/regressions.ipynb
@@ -440,8 +440,8 @@
     "    \n",
     "    \n",
     "    out_ds = adaptive_latents.NumpyTimedDataSource(o, o_t, (n_steps,))\n",
-    "    reg_class = adaptive_latents.regressions.auto_regression_decorator(adaptive_latents.regressions.SymmetricNoisyRegressor, n_steps=1, autoregress_only=False)\n",
-    "    reg = reg_class(input_d=br.bw.N, output_d=o.shape[1])\n",
+    "    reg_class = adaptive_latents.regressions.auto_regression_decorator(adaptive_latents.regressions.SemiRegularizedRegressor, n_steps=1, autoregress_only=False)\n",
+    "    reg = reg_class(input_d=br.bw.N, output_d=o.shape[1], regularization_factor=.001)\n",
     "    \n",
     "    br.add_regression_post_hoc(reg, out_ds)\n",
     "    pred = br.h.beh_pred[n_steps]\n",
@@ -506,6 +506,7 @@
     "    lh_true = br.h.beh_pred[offset][-n_samples_before_end:] - br.h.beh_error[offset][-n_samples_before_end:]\n",
     "    \n",
     "    corrs = [np.corrcoef(lh_true[:,j], lh_predicted[:,j])[0,1] for j in range(lh_true.shape[1])]\n",
+    "    sq_errors = ((lh_predicted - lh_true)**2).mean(axis=0)\n",
     "    return corrs\n",
     "\n",
     "fig, ax = plt.subplots(nrows=len(output_keys), ncols=len(input_keys), figsize=(14,2*len(output_keys)), layout='tight', squeeze=False)\n",
@@ -525,7 +526,7 @@
     "        ax[row,col].plot(predicted[s])\n",
     "        \n",
     "        if true.shape[1] < 4:\n",
-    "            corrs = \" \".join([f\"{c:.2f}\" for c in corrs])\n",
+    "            corrs = \" \".join([f\"{c:.4f}\" for c in corrs])\n",
     "        else:\n",
     "            corrs = f\"{np.mean(corrs):.3f}\"\n",
     "        ax[row,col].text(.01,.99, corrs, ha='left', va='top', transform=ax[row, col].transAxes)\n",
