makes streaming jPCA into a class

--- a/scripts/streaming_jpca.ipynb
+++ b/scripts/streaming_jpca.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "from tqdm import tqdm\n",
     "\n",
-    "from adaptive_latents.input_sources import jpca\n",
+    "from adaptive_latents.transforms import jpca\n",
     "from adaptive_latents.bw_run import AnimationManager\n",
     "import adaptive_latents\n",
     "\n",
@@ -107,17 +107,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# X = obs\n",
-    "# true_variables = None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "class CustomAnimation(AnimationManager):\n",
     "    n_rows = 2\n",
     "    n_cols = 1\n",
@@ -138,17 +127,72 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class sjPCA:\n",
+    "    def __init__(self, input_d):\n",
+    "        assert input_d % 2 == 0\n",
+    "        self.input_d = input_d\n",
+    "        self.H = jpca.make_H(self.input_d)\n",
+    "        self.reg = VanillaOnlineRegressor(input_d=self.H.shape[1], output_d=1)\n",
+    "        self.last_x = None\n",
+    "\n",
+    "        \n",
+    "    def observe(self, x):\n",
+    "        if self.last_x is None:\n",
+    "            self.last_x = x\n",
+    "            return\n",
+    "            \n",
+    "        dx = x - self.last_x\n",
+    "        rows = jpca.make_X_tilde(x[None,:]) @ self.H\n",
+    "        for j in range(self.input_d):\n",
+    "            xx = rows[j]\n",
+    "            y = dx[j]\n",
+    "            self.reg.observe(xx, y)\n",
+    "        \n",
+    "        \n",
+    "        self.last_x = x\n",
+    "\n",
+    "\n",
+    "sjpca = sjPCA(input_d=n)\n",
+    "for i in tqdm(range(X.shape[0])):\n",
+    "    sjpca.observe(X[i])\n",
+    "    # rows = jpca.make_X_tilde(X[i, None]) @ H\n",
+    "    # for j in range(n):\n",
+    "    #     x = rows[j]\n",
+    "    #     y = X_dot[i, j]\n",
+    "    #     reg.observe(x, y)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, X_dot = jpca.X_and_X_dot_from_data(X)\n",
-    "m, n = X.shape\n",
-    "\n",
-    "H = jpca.make_H(n)\n",
-    "reg = VanillaOnlineRegressor(input_d=H.shape[1], output_d=1, init_min_ratio=2)\n",
-    "\n",
-    "am = None\n",
+    "sjpca.reg.F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sjpca.last_x - X[i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "am = CustomAnimation()\n",
     "\n",
     "observations = []\n",
@@ -156,14 +200,13 @@
     "U_history = []\n",
     "k_history = []\n",
     "U = None\n",
+    "\n",
+    "sjpca = sjPCA(input_d=X.shape[1])\n",
     "for i in tqdm(range(X.shape[0])):\n",
-    "    rows = jpca.make_X_tilde(X[i, None]) @ H\n",
-    "    for j in range(n):\n",
-    "        x = rows[j]\n",
-    "        y = X_dot[i, j]\n",
-    "        reg.safe_observe(x, y)\n",
-    "    k = reg.get_beta()\n",
-    "    U = jpca.U_from_beta(k, n, U)\n",
+    "    sjpca.observe(X[i])\n",
+    "    \n",
+    "    k = sjpca.reg.get_beta()\n",
+    "    U = jpca.U_from_beta(k, X.shape[1], U)\n",
     "    U_history.append(U)\n",
     "    k_history.append(k)\n",
     "    observations.append(X[i] @ U)\n",
@@ -188,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
