adds changes made for 2024 BME symposium

--- a/scripts/dataset_plots.ipynb
+++ b/scripts/dataset_plots.ipynb
@@ -11,12 +11,11 @@
     "\n",
     "import adaptive_latents as al\n",
     "from adaptive_latents import NumpyTimedDataSource, Bubblewrap, AnimationManager, default_rwd_parameters, SymmetricNoisyRegressor, BWRun\n",
-    "import adaptive_latents.input_sources.utils as fin\n",
+    "import adaptive_latents.transforms.utils as fin\n",
     "from scipy.io import loadmat\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from sklearn.decomposition import PCA\n",
-    "from proSVD import proSVD\n",
     "rng = np.random.default_rng()\n",
     "# al.input_sources.datasets.construct_unpublished24()"
    ]
@@ -60,10 +59,12 @@
    "outputs": [],
    "source": [
     "# pre_A, pre_beh, pre_t, _ = al.input_sources.datasets.construct_nason20_dataset()\n",
+    "%matplotlib inline\n",
     "\n",
     "fig,ax = plt.subplots(nrows=2, layout=\"tight\")\n",
     "ax[0].plot(pre_smooth_t, pre_smooth_A[:,0])\n",
     "signal = pre_smooth_A[:,0]\n",
+    "\n",
     "\n",
     "kernel = np.exp(np.linspace(0,-1,5))\n",
     "kernel /= kernel.sum()\n",
@@ -170,18 +171,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fig, ax = plt.subplots(nrows=2, layout=\"tight\")\n",
-    "# dQ = np.linalg.norm(np.diff(Qs, axis=0), axis=1)\n",
-    "# dt = np.diff(pre_prosvd_t)\n",
-    "# ax[0].plot(t[:-1], dQ/dt[:,None]);\n",
-    "# ax[0].set_ylabel(\"$\\\\frac{ \\\\Vert dQ_i \\\\Vert}{dt}$\");\n",
-    "# ax[0].set_title(\"Change in proSVD vectors over time\");\n",
-    "# ax[0].set_xlabel(\"time (s)\");\n",
+    "fig, ax = plt.subplots(nrows=2, layout=\"tight\")\n",
+    "dQ = np.linalg.norm(np.diff(Qs, axis=0), axis=1)\n",
+    "dt = np.diff(pre_jpca_t)\n",
+    "ax[0].plot(t[:-1], dQ/dt[:,None]);\n",
+    "ax[0].set_ylabel(\"$\\\\frac{ \\\\Vert dQ_i \\\\Vert}{dt}$\");\n",
+    "ax[0].set_title(\"Change in proSVD vectors over time\");\n",
+    "ax[0].set_xlabel(\"time (s)\");\n",
     "\n",
-    "# ax[1].plot(t[:-1], np.log(dQ/dt[:,None]));\n",
-    "# ax[1].set_ylabel(\"$\\\\ln \\\\frac{ \\\\Vert dQ_i \\\\Vert}{dt}$\");\n",
-    "# ax[1].set_title(\"(log scale)\");\n",
-    "# ax[1].set_xlabel(\"time (s)\");"
+    "ax[1].plot(t[:-1], np.log(dQ/dt[:,None]));\n",
+    "ax[1].set_ylabel(\"$\\\\ln \\\\frac{ \\\\Vert dQ_i \\\\Vert}{dt}$\");\n",
+    "ax[1].set_title(\"(log scale)\");\n",
+    "ax[1].set_xlabel(\"time (s)\");"
    ]
   },
   {
