--- a/scripts/profiling.ipynb
+++ b/scripts/profiling.ipynb
@@ -8,14 +8,14 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('/home/jgould/Documents/AdaptiveLatents/tests')\n",
-    "from test_speed import get_speed_per_step, get_speed_by_time\n",
-    "\n",
+    "from adaptive_latents.profiling_functions import get_speed_by_time, get_speed_per_step\n",
+    "from make_profiling_figure import make_data, bw_params\n",
     "import adaptive_latents as al\n",
-    "from scipy.io import loadmat\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import h5py\n"
+    "\n",
+    "import pdb"
    ]
   },
   {
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A, beh, t, _ = al.input_sources.datasets.construct_unpublished24_data()"
+    "A, beh = make_data()"
    ]
   },
   {
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# times_dict = get_speed_per_step(A, beh, bw_params=dict(num=1000), max_steps=2000)\n"
+    "t = al.profiling_functions.get_speed_by_time(A, beh, prosvd_k=4, bw_params=bw_params, max_steps=5000)\n"
    ]
   },
   {
@@ -45,15 +45,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = get_speed_by_time(A, beh, bw_params=dict(num=1000), max_steps=2000)\n",
+    "\n",
     "plt.plot((t[:-1] - t[0])*1000,np.diff(t)*1000);\n",
-    "plt.ylim([0, 70]);"
+    "plt.ylim([0, 31]);\n",
+    "plt.axhline(30, color='k', linestyle='--')\n",
+    "plt.xlabel(\"real time (s)\")\n",
+    "plt.ylabel(\"iteration time (ms)\")\n",
+    "plt.savefig(\"/home/jgould/Downloads/super_fast.svg\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "times_dict = al.profiling_functions.get_speed_per_step(A, beh, prosvd_k=4, bw_params=bw_params, max_steps=5000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,26 +78,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.hist(times.sum(axis=0), np.linspace(7,65,101));"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots()\n",
-    "slice_start = 250\n",
-    "good_slice = times.sum(axis=0)[slice_start:]\n",
-    "ax.plot(np.arange(len(good_slice))+slice_start, good_slice)\n",
-    "ax.set_xlabel(\"iteration #\");\n",
-    "ax.set_ylabel(\"iteration time (ms)\")"
+    "plt.hist(times.sum(axis=0), np.linspace(7,65,101));"
    ]
   },
   {
@@ -95,11 +94,26 @@
    "source": [
     "fig, ax = plt.subplots()\n",
     "slice_start = 250\n",
-    "good_slice = times[:,slice_start:]\n",
-    "ax.plot(np.arange(good_slice.shape[1])+slice_start, good_slice.T, label=keys)\n",
+    "good_slice = times.sum(axis=0)[:]\n",
+    "ax.plot(np.arange(len(good_slice))+slice_start, good_slice)\n",
+    "ax.set_xlabel(\"iteration #\");\n",
+    "ax.set_ylabel(\"iteration time (ms)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "slice_start = 0\n",
+    "good_slice = times[:,:]\n",
+    "ax.plot(np.arange(good_slice.shape[1])+slice_start, np.cumsum(good_slice,0).T, label=keys)\n",
     "ax.set_xlabel(\"iteration #\");\n",
     "ax.set_ylabel(\"iteration time (ms)\")\n",
-    "ax.set_ylim([0,100])\n",
+    "ax.set_ylim([0,30])\n",
     "ax.legend();"
    ]
   }
